Deleted "Home" from the horizontal menu, it already is in the banner and in teh bread crumb path and this menu then wraps less Prevent "Climate Explorer" in the banner from going below the box when narrowing the veiwport. Prevent "Climate Explorer" in the banner to overlap with "World Meteorological Organisation"

--- a/styles/rccstyle.css
+++ b/styles/rccstyle.css
@@ -433,7 +433,7 @@ max-width:300px;}
 
 .rechtsheader{
 	float:right;
-	width:70%;
+	width:50%;
 	padding-right:20px;
 }
 .rechtsheader h2 {
